# Sandbox3D

./: .gitmodules  CMakeLists.txt  README.md  build.sh  compile_commands.json
include/: block.h  box.h  character_controller.h  game_state.h  physics.h  utils.h  world.h
src/: character_controller.cpp  main.cpp  world.cpp
